[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-core"
version = "0.3.0"
description = "Luna Core — installable agentic-automation engine library (auth, persistence, flow engine, LLM router, MCP, embeddings)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Luna" }]
dependencies = [
    "fastapi==0.115.6",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pgvector==0.3.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.20",
    "PyJWT==2.10.1",
    "bcrypt==4.2.1",
    "redis==5.2.1",
    "email-validator==2.2.0",
    "python-dotenv>=1.1.0,<2",
    "langgraph==0.2.74",
    "langgraph-checkpoint-postgres==2.0.13",
    "celery[redis]==5.4.0",
    "httpx==0.28.1",
    "cryptography==44.0.0",
    "croniter==3.0.4",
    "websockets==14.1",
    "openai==1.59.6",
    "anthropic==0.42.0",
    "fastmcp==2.3.0",
    "jsonschema==4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["luna_core*"]
exclude = ["alembic*", "tests*"]

[tool.setuptools.package-data]
luna_core = ["py.typed"]
